* Solución a varios problemas * Incorporación del Chat * Compatibilidad básica con ClaroVideo y Blim

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Test Popup</title>
+	<title>Wootsie</title>
 
 	<!-- Estilo -->
 	<link rel="stylesheet" href="assets/css/style.css" />
@@ -9,6 +9,8 @@
 	<!-- Proveedores -->
 	<script src="assets/js/providers/base.js"></script>
 	<script src="assets/js/providers/netflix.js"></script>
+	<script src="assets/js/providers/clarovideo.js"></script>
+	<script src="assets/js/providers/blim.js"></script>
 
 	<!-- JS -->
 	<script src="assets/js/libs/jquery-2.2.3.min.js"></script>
