* Arreglo de pequeños detalles * Soporte experimental para YouTube y Vimeo

--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,8 @@
 	<script src="assets/js/providers/netflix.js"></script>
 	<script src="assets/js/providers/clarovideo.js"></script>
 	<script src="assets/js/providers/blim.js"></script>
+	<script src="assets/js/providers/youtube.js"></script>
+	<script src="assets/js/providers/vimeo.js"></script>
 
 	<!-- JS -->
 	<script src="assets/js/libs/jquery-2.2.3.min.js"></script>
@@ -104,6 +106,10 @@
 	<!-- Cargando -->
 	<div class="loading">
 		<h2>Cargando...</h2>
+	</div>
+
+	<div class="footer">
+		<a href="https://github.com/WootsMX/Wootsie" target="_blank">Wootsie</a>
 	</div>
 </body>
 </html>
