* Validación de sesión * Arreglo de detalles

--- a/popup.html
+++ b/popup.html
@@ -87,7 +87,7 @@
 	<div class="join-box box">
 		<h3>Unirse a una sesión</h3>
 
-		<span class="error-msg">¡La sesión no existe! Quizá haya caducado o lo has escrito incorrectamente.</span>
+		<span class="error-msg"></span>
 
 		<div class="form-group">
 			<input id="join-name" placeholder="Tu nombre" />
