* Soporte para Mubi * Pequeñas mejoras al chat

--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,7 @@
 	<script src="assets/js/providers/netflix.js"></script>
 	<script src="assets/js/providers/clarovideo.js"></script>
 	<script src="assets/js/providers/blim.js"></script>
+	<script src="assets/js/providers/mubi.js"></script>
 	<script src="assets/js/providers/youtube.js"></script>
 	<script src="assets/js/providers/vimeo.js"></script>
 
